--- a/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Views/PlayerControl.xib
+++ b/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Views/PlayerControl.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,61 +17,64 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="640" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="640" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IOp-BE-Ma6">
-                    <rect key="frame" x="53" y="15" width="49" height="20"/>
+                    <rect key="frame" x="38" y="13" width="60" height="14"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="exT-sb-BOd"/>
+                        <constraint firstAttribute="height" constant="14" id="0a7-O9-FEI"/>
+                        <constraint firstAttribute="width" constant="56" id="DLx-ZI-TvE"/>
                     </constraints>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="00:00" id="QBG-u6-t2N">
-                        <font key="font" size="14" name="Menlo-Regular"/>
+                    <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="00:00" usesSingleLineMode="YES" id="QBG-u6-t2N">
+                        <font key="font" size="12" name="Soleil"/>
                         <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8jO-Ld-nn0">
-                    <rect key="frame" x="118" y="15" width="404" height="19"/>
+                    <rect key="frame" x="102" y="10" width="466" height="19"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="400" id="eEN-Ow-Ezw"/>
+                        <constraint firstAttribute="height" constant="15" id="sRP-hR-Myv"/>
                     </constraints>
                     <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="1" tickMarkPosition="above" sliderType="linear" id="Gyh-Oz-32g"/>
                 </slider>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KTF-Qn-y4E">
-                    <rect key="frame" x="538" y="15" width="49" height="20"/>
+                <imageView translatesAutoresizingMaskIntoConstraints="NO" id="Ubj-9h-laa">
+                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="tRZ-5v-HG7"/>
+                        <constraint firstAttribute="width" constant="40" id="alw-My-HYw"/>
+                        <constraint firstAttribute="height" constant="40" id="epQ-Qo-JQN"/>
                     </constraints>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="00:00" id="dfV-WV-JQH">
-                        <font key="font" size="14" name="Menlo-Regular"/>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="play-icon-small" id="vWK-aG-IuH"/>
+                </imageView>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KTF-Qn-y4E">
+                    <rect key="frame" x="572" y="13" width="60" height="14"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="56" id="HEf-kR-HvO"/>
+                        <constraint firstAttribute="height" constant="14" id="QyU-ZY-k1K"/>
+                    </constraints>
+                    <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="center" title="00:00:00" usesSingleLineMode="YES" id="dfV-WV-JQH">
+                        <font key="font" size="12" name="Soleil"/>
                         <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <imageView translatesAutoresizingMaskIntoConstraints="NO" id="Ubj-9h-laa">
-                    <rect key="frame" x="0.0" y="0.0" width="47" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="PjM-np-IE3"/>
-                        <constraint firstAttribute="width" constant="47" id="sYy-w1-whJ"/>
-                    </constraints>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="play-icon-small" id="vWK-aG-IuH"/>
-                </imageView>
             </subviews>
             <constraints>
-                <constraint firstItem="Ubj-9h-laa" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="58z-hK-91m"/>
-                <constraint firstAttribute="bottom" secondItem="Ubj-9h-laa" secondAttribute="bottom" id="EGg-g1-VnU"/>
-                <constraint firstItem="Ubj-9h-laa" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="KT2-Xu-XQH"/>
-                <constraint firstItem="8jO-Ld-nn0" firstAttribute="leading" secondItem="IOp-BE-Ma6" secondAttribute="trailing" constant="20" id="LiS-Vm-01r"/>
-                <constraint firstItem="KTF-Qn-y4E" firstAttribute="centerY" secondItem="IOp-BE-Ma6" secondAttribute="centerY" id="RF5-8r-NGG"/>
-                <constraint firstItem="IOp-BE-Ma6" firstAttribute="centerY" secondItem="8jO-Ld-nn0" secondAttribute="centerY" id="WJB-Cd-YpO"/>
-                <constraint firstItem="8jO-Ld-nn0" firstAttribute="centerX" secondItem="c22-O7-iKe" secondAttribute="centerX" id="hAn-T1-ORI"/>
-                <constraint firstItem="8jO-Ld-nn0" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="t7z-3l-uSp"/>
-                <constraint firstItem="KTF-Qn-y4E" firstAttribute="leading" secondItem="8jO-Ld-nn0" secondAttribute="trailing" constant="20" id="wl5-6j-vQi"/>
+                <constraint firstAttribute="bottom" secondItem="Ubj-9h-laa" secondAttribute="bottom" id="30g-Yl-J1Y"/>
+                <constraint firstItem="8jO-Ld-nn0" firstAttribute="centerY" secondItem="IOp-BE-Ma6" secondAttribute="centerY" id="3JQ-qW-OJP"/>
+                <constraint firstItem="KTF-Qn-y4E" firstAttribute="centerY" secondItem="IOp-BE-Ma6" secondAttribute="centerY" id="8eJ-kF-XTZ"/>
+                <constraint firstItem="KTF-Qn-y4E" firstAttribute="leading" secondItem="8jO-Ld-nn0" secondAttribute="trailing" constant="8" id="Mpo-lc-fGc"/>
+                <constraint firstItem="IOp-BE-Ma6" firstAttribute="centerY" secondItem="Ubj-9h-laa" secondAttribute="centerY" id="Zkj-J4-XUJ"/>
+                <constraint firstAttribute="trailing" secondItem="KTF-Qn-y4E" secondAttribute="trailing" constant="10" id="fc7-Gw-uNn"/>
+                <constraint firstItem="8jO-Ld-nn0" firstAttribute="leading" secondItem="IOp-BE-Ma6" secondAttribute="trailing" constant="8" id="ghk-Bi-JGg"/>
+                <constraint firstItem="Ubj-9h-laa" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="ktW-qX-vTq"/>
+                <constraint firstItem="IOp-BE-Ma6" firstAttribute="leading" secondItem="Ubj-9h-laa" secondAttribute="trailing" id="tZy-Jn-Bie"/>
+                <constraint firstItem="Ubj-9h-laa" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="uES-EM-2Nd"/>
             </constraints>
         </customView>
     </objects>
     <resources>
-        <image name="play-icon-small" width="11" height="11"/>
+        <image name="play-icon-small" width="40" height="40"/>
     </resources>
 </document>
